--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,7 @@
                             <div id="dropdown-catalog" class="hidden absolute bg-catalog-dropdown w-64 left-16 p-3 z-10">
                                 <a href="/catalog/index.html" class="dropdown-item flex items-center justify-between text-white uppercase hover:underline w-full p-3 mt-2 hover:cursor-pointer">
                                     <span>Endress+Hauser</span>
-                                    <img class="hidden" src="./imgs/arrow-long-right-white.svg" >
+                                    <img class="hidden" src="../imgs/arrow-long-right-white.svg" >
                                 </a>
                                 <a class="dropdown-item flex items-center justify-between text-white uppercase hover:underline w-full p-3 hover:cursor-pointer">
                                     <span>Keb</span>
