--- a/index.html
+++ b/index.html
@@ -382,9 +382,9 @@
         </div>
     </div>
 
-    <div class="fixed bottom-2 right-2 z-10">
+    <div class="fixed bottom-0 right-0 md:bottom-2 md:bottom-2 z-10">
         <div class="flex flex-col items-center justify-between">
-            <img onclick="contact()" class="hover:cursor-pointer hover:scale-105" src="./imgs/chat.png" width="250" >
+            <img onclick="contact()" class="w-[150px] md:w-[250px] hover:cursor-pointer hover:scale-105" src="./imgs/chat.png" >
             <div class="hidden flex flex-col items-center -mt-4 mb-4" id="contact-panel">
                 <div class="flex flex-col space-y-3 transition ease-in-out delay-150">
                     <a class="bg-[#A9C7F3] px-4 py-5 rounded-full flex items-center justify-center hover:cursor-pointer hover:scale-110">
