--- a/catalog/index.html
+++ b/catalog/index.html
@@ -133,7 +133,7 @@
                         <div class="relative flex flex-col justify-between h-full">
                             <p class="p-8 font-medium text-lg">Программное обеспечение</p>
                             <div class="flex justify-end">
-                                <img src="../imgs/catalog/IMSMiddleware_SXS70_PP 1.png">
+                                <img src="../imgs/catalog/IMSMiddleware_SXS70_PP 1.png" width="230">
                             </div>
                             <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
                         </div>
