--- a/product/index.html
+++ b/product/index.html
@@ -139,7 +139,7 @@
                                 <img src="../imgs/products/LiquilineTo Go CYM290 1.png">
                             </div>
                             <div class="flex flex-col space-y-8 p-4">
-                                <p class="font-medium text-xl">Multiparameter handheldLiquiline To Go CYM290</p>
+                                <p class="font-medium text-md">Multiparameter handheldLiquiline To Go CYM290</p>
                                 <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
                             </div>
                         </div>
@@ -152,7 +152,7 @@
                                 <img src="../imgs/products/Converterbox CYM17_s_001 1.png">
                             </div>
                             <div class="flex flex-col space-y-6 p-4">
-                                <p class="font-medium text-xl">Memosens Analog Converter CYM17</p>
+                                <p class="font-medium text-md">Memosens Analog Converter CYM17</p>
                                 <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
                             </div>
                         </div>
@@ -165,7 +165,7 @@
                                 <img src="../imgs/products/LiquilineTo Go CYM291 1.png">
                             </div>
                             <div class="flex flex-col space-y-8 p-4">
-                                <p class="font-medium text-xl">Ex-certified multiparameter handheldLiquiline To Go CYM291</p>
+                                <p class="font-medium text-md">Ex-certified multiparameter handheldLiquiline To Go CYM291</p>
                                 <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
                             </div>
                         </div>
