--- a/service/index.html
+++ b/service/index.html
@@ -82,12 +82,15 @@
                 <p class="text-white font-medium text-lg mt-4 mb-20">
                     Мы предлагаем различные услуги в зависимости <br> от их специализации и области деятельности
                 </p>
-                <img src="../imgs/arrow-down-circle.svg" width="60" >
+                <a href="#section">
+                    <img src="../imgs/arrow-down-circle.svg" width="60" >
+                </a>
+                
             </div>
         </div>
     </section>
 
-    <section class="bg-gray-100">
+    <section class="bg-gray-100" id="timeline">
         <div class="container-sm px-4 py-16">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="relative flex flex-col space-y-8 p-8">
@@ -98,7 +101,7 @@
                     </div>
                     <div class="z-10 ml-4 uppercase text-4xl font-medium max-w-[500px]">Наши решения тщательно разрабатываются командой экспертов в области инжинирии</div>
                 </div>
-                <div class="h-[700px] overflow-auto p-4">
+                <div class="p-4 h-[100vh] overflow-auto">
                     <ol class="timeline-section border-l-2 border-blue-200">
                         <li class="step-block mb-20">
                             <div class="inline pt-2">
