--- a/about/index.html
+++ b/about/index.html
@@ -265,12 +265,12 @@
         </div>
     </section>
 
-    <section id="info" class="bg-[#092A5E]">
+    <section id="info" class="bg-[#092A5E] h-[100vh]">
         <div class="container-sm px-8 py-10">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="bg-cap">
                     <div class="border-b border-1 border-white w-full mb-8"></div>
-                    <div class="anim flex flex-col justify-start">
+                    <div class="anim flex flex-col justify-start space-y-12 mt-12">
                         <div class="text-gray-400 font-bold text-5xl" id="section2">8500 МЛН KZT</div>
                         <div class="grid grid-cols-2" id="section3">
                             <p class="text-white font-bold text-5xl">18200 ед.</p>
