--- a/index.html
+++ b/index.html
@@ -400,9 +400,9 @@
         </div>
     </div>
 
-    <div id="videoModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
+    <div id="videoModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden p-6">
         <!-- Modal content -->
-        <div class="bg-white p-8 rounded-lg">
+        <div class="bg-white p-4 rounded-lg w-full h-[40%] md:w-[80%] md:h-[60%]">
           <!-- Close button -->
           <button id="closeModalButton" class="absolute top-4 right-4 text-gray-600 hover:text-gray-800">
             <svg class="w-12 h-12" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -411,10 +411,8 @@
           </button>
     
           <!-- YouTube Video Embed -->
-          <div class="aspect-w-16 aspect-h-9">
-            <iframe width="700" height="400" src="https://www.youtube-nocookie.com/embed/DamrVqhpY2s?si=qVlwSAEPdjR8eDBW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          </div>
-        </div>
+        <iframe class="w-full h-full" src="https://www.youtube-nocookie.com/embed/DamrVqhpY2s?si=qVlwSAEPdjR8eDBW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
     </div>
 
     <script>
