--- a/product/index.html
+++ b/product/index.html
@@ -211,6 +211,24 @@
         </div>
     </div>
 
+    <div class="fixed bottom-10 right-10 z-10">
+        <div class="flex flex-col items-center justify-between">
+            <div style="display: none;" class="flex flex-col items-center -mt-4 mb-4 transition delay-300 ease-in-out" id="contact-panel">
+                <div class="flex flex-col space-y-3 transition ease-in-out delay-150">
+                    <a class="bg-[#A9C7F3] w-16 h-16 rounded-full flex items-center justify-center contact-btn">
+                        <img src="../imgs/phone.svg" width="25">
+                    </a>
+                    <a class="bg-[#A9C7F3] w-16 h-16 rounded-full flex items-center justify-center contact-btn">
+                        <img src="../imgs/whatsapp-icon.svg" width="30">
+                    </a>
+                </div>
+            </div>
+            <div style="background: linear-gradient(45.39deg, #092A5E 12.93%, #5C89CF 146.37%);" id="chat-btn" onclick="contact()" class="h-20 w-20 hover:cursor-pointer hover:scale-105 rounded-full flex justify-center items-center animation-pulse">
+                <img src="../imgs/chat-icon.svg" width="30">
+            </div>
+        </div>
+    </div>
+
     <script>
         window.addEventListener('load', function() { AOS.init(); });
     </script>
