--- a/catalog/index.html
+++ b/catalog/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Каталог Endress+Hauser “САР технология”</title>
+    <link rel="icon" type="image/x-icon" href="../imgs/logo.png">
     <link rel="stylesheet" href="./style.css" >
     <link rel="stylesheet" href="../style.css" >
     <link rel="stylesheet" href="../index.css" >
@@ -84,92 +85,78 @@
     <section class="bg-white">
         <div class="container-sm py-20">
             <div class="grid md:grid-rows-3 md:grid-cols-3 grid-cols-2 grid-flow-row gap-1">
-                <a href="../products/index.html" class="md:row-span-2">
-                    <div class="catalog-item bg-white shadow-lg h-full hover:cursor-pointer">
-                        <div class="relative flex flex-col justify-between h-full">
-                            <p class="p-8 font-medium text-lg">Анализ жидкостей</p>
-                            <div class="flex justify-end">
-                                <img src="../imgs/catalog/Liquiline Mobile CML18_s_stehend_001-PhotoRoom 1.png">
-                            </div>
-                            <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
+                <a href="../products/index.html" class="catalog-item bg-white shadow-lg h-full hover:cursor-pointer">
+                    <div class="relative flex flex-col justify-between h-full">
+                        <p class="p-8 font-medium text-lg">Анализ жидкостей</p>
+                        <div class="flex justify-end">
+                            <img src="../imgs/catalog/Liquiline Mobile CML18_s_stehend_001-PhotoRoom 1.png">
                         </div>
+                        <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
                     </div>
                 </a>
-                <a href="../products/index.html">
-                    <div class="catalog-item shadow-lg h-full hover:cursor-pointer">
-                        <div class="relative flex flex-col justify-between h-full">
-                            <p class="p-8 font-medium text-lg">Давление</p>
-                            <div class="flex justify-end">
-                                <img src="../imgs/catalog/Deltapilot_FMB50_PP-PhotoRoom 1.png">
-                            </div>
-                            <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
+        
+                <a href="../products/index.html" class="catalog-item shadow-lg h-full hover:cursor-pointer">
+                    <div class="relative flex flex-col justify-between h-full">
+                        <p class="p-8 font-medium text-lg">Давление</p>
+                        <div class="flex justify-end">
+                            <img src="../imgs/catalog/Deltapilot_FMB50_PP-PhotoRoom 1.png">
                         </div>
+                        <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
                     </div>
                 </a>
-                <a href="../products/index.html">
-                    <div class="catalog-item shadow-lg h-full hover:cursor-pointer">
-                        <div class="relative flex flex-col justify-between h-full">
-                            <p class="p-8 font-medium text-lg">Расход</p>
-                            <div class="flex justify-end">
-                                <img src="../imgs/catalog/Prowirl_O_200__7O2C__PP_01-PhotoRoom 1.png">
-                            </div>
-                            <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
+                
+                <a href="../products/index.html" class="catalog-item shadow-lg h-full hover:cursor-pointer">
+                    <div class="relative flex flex-col justify-between h-full">
+                        <p class="p-8 font-medium text-lg">Расход</p>
+                        <div class="flex justify-end">
+                            <img src="../imgs/catalog/Prowirl_O_200__7O2C__PP_01-PhotoRoom 1.png">
                         </div>
+                        <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
                     </div>
                 </a>
-                <a href="../products/index.html">
-                    <div class="catalog-item bg-white shadow-lg h-full hover:cursor-pointer">
-                        <div class="relative flex flex-col justify-between h-full">
-                            <p class="p-8 font-medium text-lg">Системные компоненты и регистраторы</p>
-                            <div class="flex justify-end">
-                                <img src="../imgs/catalog/Memograph M, RSG45-PhotoRoom 1.png">
-                            </div>
-                            <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
+                <a href="../products/index.html" class="catalog-item bg-white shadow-lg h-full hover:cursor-pointer">
+                    <div class="relative flex flex-col justify-between h-full">
+                        <p class="p-8 font-medium text-lg">Системные компоненты и регистраторы</p>
+                        <div class="flex justify-end">
+                            <img src="../imgs/catalog/Memograph M, RSG45-PhotoRoom 1.png">
                         </div>
+                        <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
                     </div>
                 </a>
-                <a href="../products/index.html">
-                    <div class="catalog-item shadow-lg h-full hover:cursor-pointer">
-                        <div class="relative flex flex-col justify-between h-full">
-                            <p class="p-8 font-medium text-lg">Программное обеспечение</p>
-                            <div class="flex justify-end">
-                                <img src="../imgs/catalog/IMSMiddleware_SXS70_PP 1.png" width="230">
-                            </div>
-                            <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
+                <a href="../products/index.html" class="catalog-item shadow-lg h-full hover:cursor-pointer">
+                    <div class="relative flex flex-col justify-between h-full">
+                        <p class="p-8 font-medium text-lg">Программное обеспечение</p>
+                        <div class="flex justify-end">
+                            <img src="../imgs/catalog/IMSMiddleware_SXS70_PP 1.png" width="230">
                         </div>
+                        <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
                     </div>
                 </a>
-                <a href="../products/index.html">
-                    <div class="catalog-item bg-white shadow-lg h-full hover:cursor-pointer">
-                        <div class="relative flex flex-col justify-between h-full">
-                            <p class="p-8 font-medium text-lg">Температура</p>
-                            <div class="flex justify-end">
-                                <img src="../imgs/catalog/TMT162-PhotoRoom 1.png">
-                            </div>
-                            <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
+                <a href="../products/index.html" class="catalog-item bg-white shadow-lg h-full hover:cursor-pointer">
+                    <div class="relative flex flex-col justify-between h-full">
+                        <p class="p-8 font-medium text-lg">Температура</p>
+                        <div class="flex justify-end">
+                            <img src="../imgs/catalog/TMT162-PhotoRoom 1.png">
                         </div>
+                        <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
                     </div>
                 </a>
-                <a href="../products/index.html">
-                    <div class="catalog-item shadow-lg h-full hover:cursor-pointer">
-                        <div class="relative flex flex-col justify-between h-full">
-                            <p class="p-8 font-medium text-lg">Уровень</p>
-                            <div class="flex justify-end">
-                                <img src="../imgs/catalog/Prosonic_FDU93_PP-PhotoRoom 1.png">
-                            </div>
-                            <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
+                <a href="../products/index.html" class="catalog-item shadow-lg h-full hover:cursor-pointer">
+                    <div class="relative flex flex-col justify-between h-full">
+                        <p class="p-8 font-medium text-lg">Уровень</p>
+                        <div class="flex justify-end">
+                            <img src="../imgs/catalog/Prosonic_FDU93_PP-PhotoRoom 1.png">
                         </div>
+                        <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
                     </div>
                 </a>
-                <a href="../products/index.html">
-                    <div class="catalog-item shadow-lg h-full hover:cursor-pointer">
-                        <div class="relative flex flex-col justify-between h-full">
-                            <p class="p-8 font-medium text-lg">Оптический метод анализа химических свойств</p>
-                            <div class="flex justify-end">
-                                <img src="../imgs/catalog/SS500_ANGLE-PhotoRoom 1.png">
-                            </div>
-                            <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
+                <a href="../products/index.html" class="catalog-item shadow-lg h-full hover:cursor-pointer">
+                    <div class="relative flex flex-col justify-between h-full">
+                        <p class="p-8 font-medium text-lg">Оптический метод анализа химических свойств</p>
+                        <div class="flex justify-end">
+                            <img src="../imgs/catalog/SS500_ANGLE-PhotoRoom 1.png">
                         </div>
+                        <img src="../imgs/arrows.svg" class="arrow absolute bottom-6 left-6 -rotate-90" width="20">
                     </div>
                 </a>
             </div>
