--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Контакты компании “САР технология”</title>
+    <link rel="icon" type="image/x-icon" href="../imgs/logo.png">
     <link rel="stylesheet" href="./style.css" >
     <link rel="stylesheet" href="../index.css" >
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
